--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <!--android:theme="@style/Theme.FitnessHelper"-->
         <activity
             android:name=".Repetitions"
             android:exported="false" />
@@ -31,9 +32,6 @@
             android:exported="false" />
         <activity
             android:name=".DetailsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ExercisesActivity"
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
