added FittnesMachine options, created adapter, recyclerview , row xml file, and played chart and gradle files, this is a backup file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,9 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
@@ -45,6 +46,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.1.1'
     implementation 'androidx.constraintlayout:constraintlayout-core:1.0.4'
 
+    //Pie chart-hoz kell pl.
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+    implementation("androidx.multidex:multidex:2.0.1")
 
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:30.5.0')
