--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <!--android:theme="@style/Theme.FitnessHelper"-->
+        <activity
+            android:name=".FitnessMachineDetails"
+            android:exported="false" />
+        <!-- android:theme="@style/Theme.FitnessHelper" -->
         <activity
             android:name=".Repetitions"
             android:exported="false" />
