just a basic save before uploading to moodle

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:name=".EditWorkoutTemplateActivity"
             android:exported="false" />
         <activity
-            android:name=".EditWorkoutActivity"
+            android:name=".activities.EditWorkoutActivity"
             android:exported="false" />
         <activity
             android:name=".CreateWorkoutTemplate"
